--- a/Web.config
+++ b/Web.config
@@ -49,7 +49,7 @@
       <remove name="TRACEVerbHandler" />
       <remove name="BasicAuthenticationGetMediaHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add verb="GET" path="*.media" name="BasicAuthenticationGetMediaHandler" type="DataConnector.Handler.BasicAuthenticationGetMediaHandler" />  
+      <add verb="GET" path="*.media" name="BasicAuthenticationGetMediaHandler" type="Qualtrak.Coach.DataConnector.Handler.BasicAuthenticationGetMediaHandler" />  
     </handlers>
   </system.webServer>
   <runtime>
